mongo/mongo-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongodb

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mongodb.k8s.singhjee.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb-service
            port:
              number: 9000
